# geo-svg

./: CHANGELOG.md  Cargo.toml  README.md  cog.toml  flake.nix
.github/workflows/: rust.yml
src/: arrow.rs  color.rs  combine.rs  lib.rs  style.rs  svg.rs  svg_impl.rs  text.rs  to_svg.rs  to_svg_str.rs  unit.rs
src/properties/: mod.rs  stylable.rs  style.rs  viewbox.rs
src/svg_document/: builder.rs  document.rs  mod.rs  part.rs  shape.rs  tests.rs
src/svg_trait/: mod.rs  svg_impl.rs  tests.rs  to_svg_str.rs
