[package]
name = "geo-svg"
version = "0.6.1"
authors = ["Gérald Lelong <gerald.lelong@easymov.fr>", "RobWalt <robwalter96@gmail.com>"]
edition = "2021"
license = "ISC"
readme = "README.md"
repository = "https://github.com/georust/geo-svg"
description = "Convert geo types to SVG strings for visualization"
keywords = ["geo", "polygon", "svg", "visualization"]
categories = ["development-tools::debugging", "graphics", "multimedia::images", "visualization"]

[dependencies]
geo = { version = "0.27.0", default-features = false }
num-traits = "0.2.17"
